--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 							<h3><span>Software Engineer | UI/UX Designer</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
+									<li><a href="https://www.instagram.com/tantowibowo3/"><i class="icon-github"></i></a></li>
 									<li><a href="https://www.instagram.com/tantowibowo3/"><i class="icon-instagram"></i></a></li>
 									<li><a href="https://www.linkedin.com/in/tanto-wi-763180194/"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="https://www.behance.net/tanto_wi/"><i class="icon-behance"></i></a></li>
@@ -92,6 +93,7 @@
 					<p>In addition to technical skills, I am also a talented UI/UX designer with a keen eye for detail and a passion for creating visually appealing and user-friendly designs. I am able to implement designs in web and mobile applications effectively.</p>
 					<p>
 						<ul class="fh5co-social-icons">
+							<li><a href="https://github.com/tantowi-17/"><i class="icon-github"></i></a></li>
 							<li><a href="https://www.instagram.com/tantowibowo3/"><i class="icon-instagram"></i></a></li>
 							<li><a href="https://www.linkedin.com/in/tanto-wi-763180194/"><i class="icon-linkedin2"></i></a></li>
 							<li><a href="https://www.behance.net/tanto_wi/"><i class="icon-behance"></i></a></li>
