Uppdate detail profile

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					<ul class="info">
 						<li><span class="first-block">Full Name</span><span class="second-block">Tanto Wibowo</span></li>
 						<li><span class="first-block">Email</span><span class="second-block">tantowibowo7@gmail.com</span></li>
-						<li><span class="first-block">Website</span><span class="second-block">www.tantowi.com</span></li>
+						<li><span class="first-block">Website</span><span class="second-block">www.tantowi-17.github.io</span></li>
 						<li><span class="first-block">Address</span><span class="second-block">Makassar, Indonesia</span></li>
 					</ul>
 				</div>
@@ -162,6 +162,28 @@
 								</div>
 							</div>
 						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Logo Designer</h3>
+									<span class="company">Freelance - 2015 - Current</span>
+								</div>
+								<div class="timeline-body">
+								</div>
+							</div>
+						</li>
+						<li class="animate-box timeline-unverted">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Graphic Designer</h3>
+									<span class="company">Freelance - 2015 - Current</span>
+								</div>
+								<div class="timeline-body">
+								</div>
+							</div>
+						</li>
 						<br>
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Education</h3></div>
@@ -170,8 +192,8 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Masters Degree</h3>
-									<span class="company">University Handayani - 2022 - 2024</span>
+									<h3 class="timeline-title">Computer Science Master's Student</h3>
+									<span class="company">University Handayani - 2022 - Current</span>
 								</div>
 								<div class="timeline-body">
 								</div>
@@ -218,7 +240,7 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Assistant Lecturer</h3>
+									<h3 class="timeline-title">Assistant Lecturer Programming C#</h3>
 									<span class="company">University Dipa - 2016 - 2018</span>
 								</div>
 								<div class="timeline-body">
@@ -299,7 +321,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">jQuery</span><span class="value-right">75%</span></h3>
+						<h3><span class="name-left">JavaScript</span><span class="value-right">75%</span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
