Add animate box on section about me

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4">
+				<div class="col-md-4 animate-box">
 					<ul class="info">
 						<li><span class="first-block">Full Name</span><span class="second-block">Tanto Wibowo</span></li>
 						<li><span class="first-block">Email</span><span class="second-block">tantowibowo7@gmail.com</span></li>
@@ -87,7 +87,7 @@
 						<li><span class="first-block">Address</span><span class="second-block">Makassar, Indonesia</span></li>
 					</ul>
 				</div>
-				<div class="col-md-8">
+				<div class="col-md-8 animate-box">
 					<h2>Hello !</h2>
 					<p>I am a highly skilled software engineer, full stack developer, and UI/UX designer currently pursuing a Masters in Computer Science. With a strong background in programming languages such as JavaScript, Python and Java, I have extensive experience in Full Stack Development and Web Development Frameworks, such as Grails, CodeIgniter, Spring Boot and Flutter.</p>
 					<p>In addition to technical skills, I am also a talented UI/UX designer with a keen eye for detail and a passion for creating visually appealing and user-friendly designs. I am able to implement designs in web and mobile applications effectively.</p>
