Update title and fix bug url github

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/tantowi.png);"></div>
-							<h1><span>Tanto Wibowo</span></h1>
-							<h3><span>Software Engineer | UI/UX Designer</span></h3>
+							<h1><span>Tanto Wibowo S.Kom</span></h1>
+							<h3><span>Software Engineer | UI/UX Specialist</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
-									<li><a href="https://www.instagram.com/tantowibowo3/"><i class="icon-github"></i></a></li>
+									<li><a href="https://github.com/tantowi-17/"><i class="icon-github"></i></a></li>
 									<li><a href="https://www.instagram.com/tantowibowo3/"><i class="icon-instagram"></i></a></li>
 									<li><a href="https://www.linkedin.com/in/tanto-wi-763180194/"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="https://www.behance.net/tanto_wi/"><i class="icon-behance"></i></a></li>
@@ -83,7 +83,6 @@
 					<ul class="info">
 						<li><span class="first-block">Full Name</span><span class="second-block">Tanto Wibowo</span></li>
 						<li><span class="first-block">Email</span><span class="second-block">tantowibowo7@gmail.com</span></li>
-						<li><span class="first-block">Website</span><span class="second-block">www.tantowi-17.github.io</span></li>
 						<li><span class="first-block">Address</span><span class="second-block">Makassar, Indonesia</span></li>
 					</ul>
 				</div>
@@ -166,7 +165,7 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Logo Designer</h3>
+									<h3 class="timeline-title">Logo Design Specialist</h3>
 									<span class="company">Freelance - 2015 - Current</span>
 								</div>
 								<div class="timeline-body">
