Add Experience Data Scientist

--- a/index.html
+++ b/index.html
@@ -117,6 +117,17 @@
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Work Experience</h3></div>
 						</li>
+						<li class="animate-box timeline-unverted">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Data Scientist</h3>
+									<span class="company">Master in Computer Science Student - 2022 - Current</span>
+								</div>
+								<div class="timeline-body">
+								</div>
+							</div>
+						</li>
 						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
