Change Title Data Scientist to Machine Learning

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Data Scientist</h3>
-									<span class="company">Master in Computer Science Student - 2022 - Current</span>
+									<h3 class="timeline-title">Machine Learning</h3>
+									<span class="company">Computer Science Master's Student - 2022 - Current</span>
 								</div>
 								<div class="timeline-body">
 								</div>
