--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
+	<!-- App favicon -->
+	<link rel="shortcut icon" href="images/ficon.png">
+
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
 	
