--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/tantowi.png);"></div>
-							<h1><span>Tanto Wibowo S.Kom</span></h1>
+							<h1><span>Tanto Wibowo S.Kom,. M.Kom</span></h1>
 							<h3><span>Software Engineer | UI/UX Specialist</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
