Update HTML porto

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 									<li><a href="https://www.behance.net/tanto_wi/"><i class="icon-behance"></i></a></li>
 								</ul>
 							</p>
+							<a href="mailto:tantowibowo7@gmail.com" class="btn btn-default">Contact Us</a>
 						</div>
 					</div>
 				</div>
@@ -206,7 +207,7 @@
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3 class="timeline-title">Computer Science Master's Student</h3>
-									<span class="company">University Handayani - 2022 - Current</span>
+									<span class="company">University Handayani - 2022 - 2024</span>
 								</div>
 								<div class="timeline-body">
 								</div>
@@ -226,6 +227,17 @@
 						<br>
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Achivment</h3></div>
+						</li>
+						<li class="animate-box timeline-unverted">
+							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Master in Computer Systems</h3>
+									<span class="company">University Handayani - 2024</span>
+								</div>
+								<div class="timeline-body">
+								</div>
+							</div>
 						</li>
 						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
@@ -274,75 +286,97 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6">
-					<div class="progress-wrap">
-						<h3><span class="name-left">HTML5/CSS3</span><span class="value-right">95%</span></h3>
-						<div class="progress">
-						  <div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
-						  </div>
-						</div>
-					</div>
-					<div class="progress-wrap">
-						<h3><span class="name-left">WordPress</span><span class="value-right">90%</span></h3>
-						<div class="progress">
-						  <div class="progress-bar progress-bar-2 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
-						  </div>
-						</div>
-					</div>
-					<div class="progress-wrap">
-						<h3><span class="name-left">PHP</span><span class="value-right">80%</span></h3>
-						<div class="progress">
-						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-						  </div>
-						</div>
-					</div>
-					<div class="progress-wrap">
-						<h3><span class="name-left">Java</span><span class="value-right">85%</span></h3>
-						<div class="progress">
-						  <div class="progress-bar progress-bar-4 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-						  </div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6">
-					<div class="progress-wrap">
-						<h3><span class="name-left">Design</span><span class="value-right">100%</span></h3>
-						<div class="progress">
-						  <div class="progress-bar progress-bar-5 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
-						  </div>
-						</div>
-					</div>
-					<div class="progress-wrap">
-						<h3><span class="name-left">Groovy</span><span class="value-right">70%</span></h3>
-						<div class="progress">
-						  <div class="progress-bar progress-bar-striped active" role="progressbar"
-						  aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-						  </div>
-						</div>
-					</div>
-					<div class="progress-wrap">
-						<h3><span class="name-left">Python</span><span class="value-right">85%</span></h3>
-						<div class="progress">
-						  <div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
-						  </div>
-						</div>
-					</div>
-					<div class="progress-wrap">
-						<h3><span class="name-left">JavaScript</span><span class="value-right">75%</span></h3>
-						<div class="progress">
-						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
-						  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
-						  </div>
-						</div>
-					</div>
+				<div class="col-sm-12">
+					<span class="label label-danger">Java</span>
+					<span class="label label-danger">Groovy (Grails)</span>
+					<span class="label label-primary">Adobe AEM/CQ</span>
+					<span class="label label-primary">Sitecore</span>
+					<span class="label label-success">Hibernate</span>
+					<span class="label label-success">Javascript</span>
+					<span class="label label-success">jQuery</span>
+					<span class="label label-success">Vue.Js</span>
+					<span class="label label-default">HTML</span>
+					<span class="label label-primary">CSS</span>
+					<span class="label label-primary">SASS</span>
+					<span class="label label-info">UI/UX</span>
+					<span class="label label-warning">MySQL</span>
+					<span class="label label-warning">MSSQL</span>
+					<span class="label label-warning">Sqlite</span>
+					<span class="label label-warning">Firebase</span>
+					<span class="label label-warning">Node JS</span>
+					<span class="label label-info">C/C++</span>
+					<span class="label label-info">C#</span>
+					<span class="label label-info">Dart</span>
+					<span class="label label-info">Python</span>
+					<span class="label label-primary">Algolia</span>
+					<span class="label label-primary">Elasticsearch</span>
+					<span class="label label-primary">Kibana</span>
+					<span class="label label-danger">PHP</span>
+					<span class="label label-danger">Laravel</span>
+					<span class="label label-danger">Codeigniter</span>
+					<span class="label label-info">Flutter</span>
+					<span class="label label-default">Git</span>
+					<span class="label label-default">MVC</span>
+					<span class="label label-danger">Python</span>
+					<span class="label label-primary">R</span>
+					<span class="label label-success">TensorFlow</span>
+					<span class="label label-info">Keras</span>
+					<span class="label label-warning">PyTorch</span>
+					<span class="label label-default">Scikit-Learn</span>
+					<span class="label label-primary">Pandas</span>
+					<span class="label label-info">NumPy</span>
+					<span class="label label-success">Matplotlib</span>
+					<span class="label label-default">Seaborn</span>
+					<span class="label label-danger">SQL</span>
+					<span class="label label-warning">Hadoop</span>
+					<span class="label label-info">Spark</span>
+					<span class="label label-primary">Azure ML</span>
+					<span class="label label-success">AWS SageMaker</span>
+					<span class="label label-danger">Google AI Platform</span>
+					<span class="label label-info">Data Analysis</span>
+					<span class="label label-default">Data Visualization</span>
+					<span class="label label-warning">Natural Language Processing (NLP)</span>
+					<span class="label label-primary">Computer Vision</span>
+					<span class="label label-success">Deep Learning</span>
+					<span class="label label-info">Machine Learning Algorithms</span>
+					<span class="label label-default">Model Deployment</span>
+					<span class="label label-danger">Big Data</span>
+					<span class="label label-warning">Data Engineering</span>
+					<span class="label label-info">Statistical Analysis</span>
+					<span class="label label-danger">User Research</span>
+					<span class="label label-primary">Wireframing</span>
+					<span class="label label-success">Prototyping</span>
+					<span class="label label-info">Usability Testing</span>
+					<span class="label label-warning">Interaction Design</span>
+					<span class="label label-default">Visual Design</span>
+					<span class="label label-primary">Sketch</span>
+					<span class="label label-info">Figma</span>
+					<span class="label label-success">Adobe XD</span>
+					<span class="label label-default">InVision</span>
+					<span class="label label-danger">Affinity Designer</span>
+					<span class="label label-warning">Information Architecture</span>
+					<span class="label label-info">User Flows</span>
+					<span class="label label-primary">Personas</span>
+					<span class="label label-success">Storyboarding</span>
+					<span class="label label-danger">HTML/CSS</span>
+					<span class="label label-warning">Responsive Design</span>
+					<span class="label label-info">A/B Testing</span>
+					<span class="label label-default">Typography</span>
+					<span class="label label-primary">Color Theory</span>
+					<span class="label label-success">Design Systems</span>
+					<span class="label label-info">Accessibility</span>
+					<span class="label label-default">Front-End Development</span>
+					<span class="label label-danger">User Experience (UX)</span>
+					<span class="label label-warning">User Interface (UI)</span>
 				</div>
 			</div>
+		</div>
+	</div>
+
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.1929191458!2d119.28918667637218!3d-2.0786564979027204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d8d7d63148e6d77%3A0x6e26851fc06fc1a9!2sMamuju%20Tengah!5e0!3m2!1sen!2sid!4v1718276658861!5m2!1sen!2sid" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>			</div>
 		</div>
 	</div>
 	<hr>
@@ -350,7 +384,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2023 Tantowi. All Rights Reserved. <br>Designed by <a href="https://www.instagram.com/tantowibowo3/" target="_blank">@tantowibowo3</a></p>
+					<p>&copy; 2024 Tantowi. All Rights Reserved. <br>Designed by <a href="https://www.instagram.com/tantowibowo3/" target="_blank">@tantowibowo3</a></p>
 				</div>
 			</div>
 		</div>
@@ -372,9 +406,6 @@
 	<script src="js/jquery.stellar.min.js"></script>
 	<!-- Easy PieChart -->
 	<script src="js/jquery.easypiechart.min.js"></script>
-	<!-- Google Map -->
-	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
-	<script src="js/google_map.js"></script> -->
 	
 	<!-- Main -->
 	<script src="js/main.js"></script>
