Add section portfolio

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Computer Science Master's Student</h3>
+									<h3 class="timeline-title">Computer Science Master's</h3>
 									<span class="company">University Handayani - 2022 - 2024</span>
 								</div>
 								<div class="timeline-body">
@@ -273,6 +273,48 @@
 							</div>
 						</li>
 			    	</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+	<hr>
+	<div id="fh5co-skills" class="animate-box bg-dark">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
+					<h2>Portfolio</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-4">
+					<div class="thumbnail">
+						<img src="images/porto-1.jpg" alt="...">
+					  </div>
+				</div>
+				<div class="col-sm-4">
+					<div class="thumbnail">
+						<img src="images/porto-2.png" alt="...">
+					  </div>
+				</div>
+				<div class="col-sm-4">
+					<div class="thumbnail">
+						<img src="images/porto-3.jpg" alt="...">
+					  </div>
+				</div>
+				<div class="col-sm-4">
+					<div class="thumbnail">
+						<img src="images/porto-4.png" alt="...">
+					  </div>
+				</div>
+				<div class="col-sm-4">
+					<div class="thumbnail">
+						<img src="images/porto-5.png" alt="...">
+					  </div>
+				</div>
+				<div class="col-sm-4">
+					<div class="thumbnail">
+						<img src="images/porto-6.png" alt="...">
+					  </div>
 				</div>
 			</div>
 		</div>
