--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
 	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(images/cover_bg_3.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center">
+			<div class="row header-main">
+				<div class="col-md-10 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 							<div class="profile-thumb" style="background: url(images/tantowi.png);"></div>
-							<h1><span>Tanto Wibowo S.Kom,. M.Kom</span></h1>
+							<h1><span>Ir. Tanto Wibowo S.Kom., M.Kom., IPP.</span></h1>
 							<h3><span>Software Engineer | UI/UX Specialist</span></h3>
 							<p>
 								<ul class="fh5co-social-icons">
 									<li><a href="https://github.com/tantowi-17/"><i class="icon-github"></i></a></li>
 									<li><a href="https://www.instagram.com/tantowibowo3/"><i class="icon-instagram"></i></a></li>
-									<li><a href="https://www.linkedin.com/in/tanto-wi-763180194/"><i class="icon-linkedin2"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/tanto-wibowo/"><i class="icon-linkedin2"></i></a></li>
 									<li><a href="https://www.behance.net/tanto_wi/"><i class="icon-behance"></i></a></li>
 								</ul>
 							</p>
@@ -92,8 +92,10 @@
 				</div>
 				<div class="col-md-8 animate-box">
 					<h2>Hello !</h2>
-					<p>I am a highly skilled software engineer, full stack developer, and UI/UX designer currently pursuing a Masters in Computer Science. With a strong background in programming languages such as JavaScript, Python and Java, I have extensive experience in Full Stack Development and Web Development Frameworks, such as Grails, CodeIgniter, Spring Boot and Flutter.</p>
-					<p>In addition to technical skills, I am also a talented UI/UX designer with a keen eye for detail and a passion for creating visually appealing and user-friendly designs. I am able to implement designs in web and mobile applications effectively.</p>
+					<p>I’m Ir. Tanto Wibowo, S.Kom., M.Kom., IPP, a passionate Software Engineer, Full Stack Developer, and UI/UX Designer dedicated to creating innovative, efficient, and user-centered digital solutions. With a strong academic foundation in Engineering and Computer Science, I bridge the gap between technology and design to deliver products that are both functional and visually compelling. <br>
+					<br>I have extensive experience working with programming languages such as JavaScript, Python, and Java, and I’m proficient in frameworks like Grails, CodeIgniter, Spring Boot, and Flutter. This diverse technical expertise allows me to build reliable, responsive, and scalable web and mobile applications. Beyond technical development, <br>
+					<br>I specialize in UI/UX design, focusing on crafting intuitive, aesthetic, and meaningful user experiences. For me, great software is not only about performance—it’s about how it feels to use.
+					</p>
 					<p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://github.com/tantowi-17/"><i class="icon-github"></i></a></li>
@@ -202,11 +204,22 @@
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Education</h3></div>
 						</li>
+						<li class="animate-box timeline-unverted">
+							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Engineer (Ir.)</h3>
+									<span class="company">State University of Makassar — 2024 - 2025</span>
+								</div>
+								<div class="timeline-body">
+								</div>
+							</div>
+						</li>
 						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Computer Science Master's</h3>
+									<h3 class="timeline-title">Computer Science Master's (M.Kom)</h3>
 									<span class="company">University Handayani - 2022 - 2024</span>
 								</div>
 								<div class="timeline-body">
@@ -217,7 +230,7 @@
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Bachelors Degree</h3>
+									<h3 class="timeline-title">Bachelors Degree (S.Kom)</h3>
 									<span class="company">University Dipa - 2014 - 2019</span>
 								</div>
 								<div class="timeline-body">
@@ -227,6 +240,17 @@
 						<br>
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Achivment</h3></div>
+						</li>
+						<li class="animate-box timeline-unverted">
+							<div class="timeline-badge"><i class="icon-medal"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Winner of Logo Design Competition</h3>
+									<span class="company">13th Anniversary of Mamuju Tengah — 2025</span>
+								</div>
+								<div class="timeline-body">
+								</div>
+							</div>
 						</li>
 						<li class="timeline-inverted animate-box">
 							<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
@@ -426,7 +450,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2024 Tantowi. All Rights Reserved. <br>Designed by <a href="https://www.instagram.com/tantowibowo3/" target="_blank">@tantowibowo3</a></p>
+					<p>&copy; 2025 Tantowi. All Rights Reserved. <br>Designed by <a href="https://www.instagram.com/tantowibowo3/" target="_blank">@tantowibowo3</a></p>
 				</div>
 			</div>
 		</div>
